@startuml
    namespace oop.collections {

        class Surgery [[Surgery.html]] {
            -id: int
            -title: String
            -severity: int
            -duration: int
            -needsDoctor: boolean
            +Surgery(int, String, int, int, boolean)
            +getId(): int
            +getTitle(): String
            +getSeverity(): int
            +getDuration(): int
            +getNeedsDoctor(): boolean
            +compareTo(Surgery): int
        }

        class SurgeryPlanner [[SurgeryPlanner.html]] {
            +registerSurgery(Surgery): void
            +unregisterSurgery(Surgery): void
            +getSurgeriesLongerThan(int): List<Surgery>
        }

        class Main [[Main.html]] {
            {static} +main(String[]): void
            {static} -displaySurgeries(List<Surgery>): void
        }

        java.lang.Comparable <|.. Surgery
        SurgeryPlanner --> "*" Surgery: surgeries\nallRegisteredSurgeries\nsurgeriesOrderedBySeverity\nsurgeriesNeedingDoctor
        Main --> Surgery: HEART_TRANSPLANT\nLUNG_X_RAY\nMAKE_PLASTER_CAST\nCHANGE_PLASTER\nROUTINE_HEALTH_CHECK\nTICK_BORNE_VACCINATION
    }

    namespace java.lang {
        interface Comparable<T> {
            {abstract} +compareTo(T): int
        }
    }

    center footer UMLDoclet 2.1.0, PlantUML %version()
@enduml
